# bulge

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  testconfig.kdl
design/: README.md  config.json  examplecachedb.sqlite  exampleinstalldb.sqlite  testconfig.kdl
src/: main.rs
src/commands/: groupinstall.rs  help.rs  install.rs  list.rs  localinstall.rs  mod.rs  remove.rs  setup.rs  sync.rs  upgrade.rs
src/commands/setup_files/: mod.rs  static_files.rs
src/static_files/: config.rs  mirrors.rs  mod.rs
src/util/: conf.rs  database.rs  lock.rs  macros.rs  mirrors.rs  mod.rs  setup.rs
src/util/config/: fns.rs  structs.rs
src/util/database/: fns.rs  mod.rs  structs.rs
src/util/packaging/: fns.rs  mod.rs  structs.rs
src/util/transactions/: conflict.rs  dependencies.rs  install.rs  mod.rs
