[package]
name = "bulge"
version = "0.1.0"
authors = ["Evie Viau <evie@uwueviee.live>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusqlite = "0.25.3"
sudo = "0.6.0"
text_io = "0.1.9"
b2sum = "0.4.0"
sha2 = "0.9.5"
hex-literal = "0.3.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
xz2 = "0.1.6"
tar = "0.4.37"
version-compare = "0.0.13"
futures = "0.3.18"
isahc = "1.6.0"