[package]
name = "bulge"
version = "0.1.1"
authors = ["Evie Viau <evie@uwueviee.live>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusqlite = "0.27.0"
sudo = "0.6.0"
ring = "0.17.0-alpha.11"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
xz2 = "0.1.6"
tar = "0.4.38"
version-compare = "0.1.0"
isahc = { version = "1.7.0", default-features = false, features = ["http2", "text-decoding"]}
hex = "0.4.3"

[profile.release]
strip = true